# grimoirebots

./: Dockerfile  pyproject.toml
.github/: dependabot.yml
grimoirebots/: settings.py  urls.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: order_confirm_delete.html  order_detail.html  order_list.html
reports/: models.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py
